--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>HTML5 Canvas Winning Wheel</title>
     <link rel="stylesheet" href="main.css" type="text/css" />
-    <script type="text/javascript" src="../../Winwheel.js"></script>
+    <script type="text/javascript" src="./Winwheel.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
   </head>
   <body>
@@ -251,6 +251,7 @@
         document.getElementById('shareBtn').setAttribute('disabled','disabled');
         document.getElementById('shareBtn').classList.add('disabled_btn')
         document.getElementById('redirectbtn').classList.remove('disabled_btn')
+        document.getElementById('redirectbtn').classList.add('action_btn_whatsapp');
         document.getElementById('redirectbtn').removeAttribute('disabled');
         document.getElementById('redirectbtn').style.cursor = 'pointer'
       }
